<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />


    <EditText
        android:id="@+id/et_email_id_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
        app:layout_constraintStart_toEndOf="@id/guideline_start_login"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
        app:layout_constraintStart_toEndOf="@id/guideline_start_login"
        app:layout_constraintTop_toBottomOf="@id/et_email_id_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:text="Login"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
        app:layout_constraintStart_toEndOf="@id/guideline_start_login"
        app:layout_constraintTop_toBottomOf="@id/et_password_login" />

    <TextView
        android:id="@+id/textview_refer_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:text="New User?  SignUp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
        app:layout_constraintStart_toEndOf="@id/guideline_start_login" />


</androidx.constraintlayout.widget.ConstraintLayout>