<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />


    <EditText
        android:id="@+id/et_name_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Name"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email_id_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_name_signup" />

    <EditText
        android:id="@+id/et_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_email_id_signup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:text="Sign up"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_password_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>